Fix jquery.insert_at_caret name

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -2,8 +2,18 @@
 
 body
   background: $ff-blue
+  color: white
+  text-align: center
+  width: 600px
+  margin: auto
+
+h1
+  font-family: ff
+  color: white
+  font-size: 64px
 
 .box
-  +box
-  font-family: ferrum
-  font-size: 64px
+  +ff-box
+
+a
+  color: white
