--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,40 @@
-.box FF RAILS
-= text_area_tag :foo, nil, size: '80x10'
+%h1 FF RAILS
+.box
+  %p 
+    そのグルガンぞくのおとこはしずかにかたった…
+    %br/
+    このだいじしんさえもたんなるよちょうにすぎぬと
+    %br/
+    せかいのひかりのみなもとであるクリスタルをちちゅうふかくひきずりこみ
+    %br/
+    まものをうみだしたおおきなふるえさえも
+    %br/
+    これからおとづれるものにくらべたらちっぽけなものである
+    %br/
+    それはとてつもなくおおきく、ふかく、くらく、
+    %br/
+    そしてかなしい…
+  %p
+    だが　きぼうはまだうしなわれていない
+    %br/
+    ４つのたましいが　ひかりにけいじをうけるであろう
+    %br/
+    そこから　すべてがはじまり
+  %p
+    ４人のしょうねんたちはみなしごで
+    %br/
+    へんきょうのむら　ウル　のちょうろう　トパパ　にそだてられた
+    %br/
+    だいじしんでクリスタルがちちゅうにしずみ
+    %br/
+    そこにできたどうくつへとやってきた４人はたんけんきぶん
+    %br/
+    ちょっとしたどきょうだめしのつもりだった…
+%p= text_field :name, nil, size: '40x10'
+= link_to 'ボタン', '#info', rel: 'facebox'
+#info(style="display:none")
+  %p あああああああああああああああああああ
+  %p あああああああああああああああああああ
+  %p あああああああああああああああああああ
+  %p あああああああああああああああああああ
+  %p あああああああああああああああああああ
